libalchemyapidir = $(includedir)/libalchemyapi

libalchemyapi_HEADERS = \
	alchemy_api.h \
	alchemy_api.hpp \
	AlchemyAPI_KeywordParams.hpp \
	AlchemyAPI_BaseParams.hpp \
	AlchemyAPI_ConceptParams.hpp \
	AlchemyAPI_ConstraintQueryParams.hpp \
	AlchemyAPI_CategoryParams.hpp \
	AlchemyAPI_EntityParams.hpp \
	AlchemyAPI_RelationParams.hpp \
	AlchemyAPI_LanguageParams.hpp \
	AlchemyAPI_TextParams.hpp \
	AlchemyAPI_TargetedSentimentParams.hpp \
	AlchemyAPI_TaxonomyParams.hpp \
	AlchemyAPI_ImageParams.hpp \
	AlchemyAPI_CombinedDataParams.hpp



